refactor!: checkstyle+prettier + cleanups